--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,60 @@
 /* Ini CSS */
+nav {display: flex;
+    align-items: center;
+    justify-content: space-between;}
+
+.logo-icon {
+    height: 48px;
+    width: 48px;
+    background-image: url(https://picsum.photos/200);
+    background-size: cover;
+    border-radius: 50%;
+}
+
+.nav-container {
+    display: flex;
+
+}
+
+.nav-item {
+    border: 1px solid;
+    color: black;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 9px;
+    border-radius: 12px;
+}
+
+.banner-img {
+    height: 300px;
+    background-image: url(https://img.freepik.com/free-photo/anime-night-sky-illustration_23-2151684347.jpg?t=st=1724472395~exp=1724475995~hmac=e6847b1…&w=900);
+    background-size: cover;
+    background-position: center;
+}
+
+.profile-container {    
+    display: flex;
+    justify-content: space-around;
+}
+
+.profile-item {
+    height:100px;
+    text-align: -webkit-center
+    
+}
+
+.profile-image{
+    border: 1px solid;
+    height: 50px;
+    background-image: url(https://picsum.photos/200);
+    background-size: cover;
+    background-position: center;
+    border-radius: 50%;
+    width: 50px;
+}
+
+.footer-container{
+    text-align: right;
+    font-weight: bold;
+}
