--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,6 @@ nav {display: flex;
 
 .banner-img {
     height: 300px;
-    background-image: url(https://img.freepik.com/free-photo/anime-night-sky-illustration_23-2151684347.jpg?t=st=1724472395~exp=1724475995~hmac=e6847b1…&w=900);
     background-size: cover;
     background-position: center;
 }
@@ -57,4 +56,23 @@ nav {display: flex;
 .footer-container{
     text-align: right;
     font-weight: bold;
+}
+
+.img-1 {
+    background-image: url(../assets/1.jpg);
+}
+
+.img-2 {
+    background-image: url(../assets/2.jpg);
+}
+
+.img-3 {
+    background-image: url(../assets/3.jpg);
+}
+
+
+@media only screen and (max-width: 500px) {
+    nav {
+        flex-direction: column;
+    }
 }
