--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,10 @@
 /* Ini CSS */
+
+/* Nav Bar */
+html {
+    scroll-behavior: smooth;
+}
+
 nav {display: flex;
     align-items: center;
     justify-content: space-between;}
@@ -6,10 +12,116 @@ nav {display: flex;
 .logo-icon {
     height: 48px;
     width: 48px;
-    background-image: url(https://picsum.photos/200);
+    background-image: url();
     background-size: cover;
     border-radius: 50%;
 }
+
+.nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 15px 200px;
+    background: #020202;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .nav,
+  .nav .nav-links {
+    display: flex;
+    align-items: center;
+  }
+  
+  .nav {
+    justify-content: space-between;
+  }
+  
+  a {
+    color: #fff;
+    text-decoration: none;
+  }
+  
+
+
+  .logo-icon {
+    height: 48px;
+    width: 48px;
+    background-image: url(../assets/logojpg.jpg);
+    background-size: cover;
+    border-radius: 50%;
+}
+
+
+
+  .nav .logo {
+    font-size: 22px;
+    font-weight: 500;
+    -webkit-text-fill-color: rgb(182, 49, 49);
+    -webkit-text-stroke: 0.5px;
+    -webkit-text-stroke-color: #d8d8d8;
+  }
+  
+  .nav .nav-links {
+    column-gap: 20px;
+    list-style: none;
+  }
+  
+  .nav .nav-links a {
+    transition: all 0.2s linear;
+  }
+  
+  .nav.openSearch .nav-links a {
+    opacity: 0;
+    pointer-events: none;
+  }
+  
+  .nav .search-icon {
+    color: #fff;
+    font-size: 20px;
+    cursor: pointer;
+  }
+  
+  .nav .search-box {
+    position: absolute;
+    right: 250px;
+    height: 45px;
+    max-width: 555px;
+    width: 100%;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.2s linear;
+  }
+  
+  .nav.openSearch .search-box {
+    opacity: 1;
+    pointer-events: auto;
+  }
+  
+  .search-box .search-icon {
+    position: absolute;
+    left: 15px;
+    top: 50%;
+    color: #0a0a0a;
+    transform: translateY(-50%);
+  }
+  
+  .search-box input {
+    height: 100%;
+    width: 100%;
+    border: none;
+    outline: none;
+    border-radius: 6px;
+    background-color: #fff;
+    padding: 0 15px 0 45px;
+  }
+  
+  .nav .navOpenBtn,
+  .nav .navCloseBtn {
+    display: none;
+  }
+
+  
 
 .nav-container {
     display: flex;
@@ -27,7 +139,7 @@ nav {display: flex;
 }
 
 .banner-img {
-    height: 300px;
+    height: 400px;
     background-size: cover;
     background-position: center;
 }
@@ -46,17 +158,45 @@ nav {display: flex;
 .profile-image{
     border: 1px solid;
     height: 50px;
-    background-image: url(https://picsum.photos/200);
     background-size: cover;
     background-position: center;
     border-radius: 50%;
     width: 50px;
 }
 
-.footer-container{
-    text-align: right;
-    font-weight: bold;
+/* Profile Image */
+.ban-1 { 
+    Background-image: url(../assets/ban1.jpg);
 }
+
+.ban-2 { 
+    Background-image: url(../assets/ban2.jpg);
+}
+
+.ban-3 { 
+    Background-image: url(../assets/ban3.jpg);
+}
+
+/*Article*/
+.MainArticle {
+    display: flex;
+    flex-direction: column; 
+}
+.MainArticle_Banner_Container {
+    margin-top: 50px;
+    height: 578px;
+    width: 100%;
+    background-position: center;
+}
+.MainArticle_Banner_Content {
+    height: 578px;
+    width: 100%;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+/* Banner Image */
 
 .img-1 {
     background-image: url(../assets/1.jpg);
@@ -71,8 +211,178 @@ nav {display: flex;
 }
 
 
+/*Massage US*/
+.MassageUS_Container {
+    display: flex;
+    justify-content: space-between; 
+}
+.form_MassageUS {
+    
+    width: 600px;
+    height: 330px;
+    padding-left: 2%;
+    margin-right: 50px;
+    border-bottom-right-radius: 75px;
+    border-bottom-left-radius: 75px;
+    border-top-right-radius: 75px;
+    border-top-left-radius: 10px;
+    background-color: #0754ac;
+}
+.Form_row {
+    display: flex;
+    flex-direction: row;
+}
+.row_label {
+    float: left;
+    width: 25%;
+}
+.row_input {
+    float: left;
+    width: 65%;
+}
+.Label_standard {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 15px;
+}
+.input_standar {
+    display: inline-block;
+    background: #fff;
+    border: 1px solid #bec0c4;
+    box-shadow: none;
+    border-radius: 8px;
+    margin: 8px 0;
+    width: 60%;
+    text-align: center;
+    font-family: arial, sans-serif;
+}
+.Button_style {
+    height: 40px;
+    width: 75%;
+    border-radius: 10px;
+    background-color: #e40808;
+    border: none;
+}
+.comments_container{
+    width: 1024px;
+    margin-top: 2rem;
+}
+.comment_card{
+    width: 800px;
+    display: grid;
+    grid-template-columns: 3% auto;
+    margin: 0.5rem;
+    border-bottom: 1px solid #c9c9c9;
+}
+.center_display{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    border-radius: 10px;
+    width: 800px;
+    background-color: #dadada;
+    border-bottom-right-radius: 75px;
+    border-bottom-left-radius: 75px;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 75px;
+}
+.comment_info{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.comment_card .pic{
+    background-color: #ffffff;
+    border-radius: 50%;
+    margin: 15%;
+    font-size: 25px;
+    color: white;
+    text-transform: uppercase;
+    width: fit-content;
+    height: fit-content;
+    
+}
+
+.comment_info .comment{
+    margin: 5px 0;
+}
+
+
+/*responsive Design*/
+
 @media only screen and (max-width: 500px) {
     nav {
         flex-direction: column;
     }
+}
+
+@media only screen and (max-width: 1440px) {
+    .form_MassageUS {
+        width: 100%;
+    }
+    .comment_card{
+        width: 100%;
+
+    }
+    .center_display{
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    .MassageUS_Container {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        flex-direction: column;
+         
+    }
+    .form_MassageUS {
+        border-bottom-right-radius: 0px;
+        border-bottom-left-radius: 0px;
+        border-top-right-radius: 0px;
+        border-top-left-radius: 0px;
+    }
+    .our-home{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        border-radius: 10px;
+        width: 100%;
+        background-color: #dadada;
+    }
+
+/* } */
+/* @media only screen and (max-width: 425px) {
+    nav {
+        display: flex;
+        flex-direction: column;
+    }
+    .nav_section{
+        flex-direction: column;
+    }
+    .comment_card{
+        width: 100%;
+
+    }
+    .center_display{
+        width: 100%;
+    }
+    .comment_card .pic{
+        font-size: 0px;
+    }
+    .profile_container {
+        display: flex;
+        flex-direction: column;
+    } */
+
+
+
+/* Footer */
+}
+.footer-container{
+    text-align: right;
+    font-weight: bold;
+    font-style: oblique;
 }
